--- a/ex004/index.html
+++ b/ex004/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
+    <title>A Galera do QG</title>
 </head>
 <body>
-    
+    <h1>Olha o fivecon aqui em cima</h1>
+    <p>Abaixo voce vai ver uma imagem que esta na mesma pasta.</p>
+    <img src="HglrQG.png" alt="logo QG">
+    <img src="escritaQG2.jpeg" alt="escrita QG">
+
 </body>
 </html>
