--- a/ex004/index.html
+++ b/ex004/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
+    <!--aqui em cima esta o fivecon do site-->
     <title>A Galera do QG</title>
 </head>
 <body>
