--- a/ex006/index.html
+++ b/ex006/index.html
@@ -16,9 +16,19 @@
         quidem et! Enim error nulla sunt quibusdam
     officiis officia, assumenda ab exercitationem in.</p>
      <h3>Carater excecional</h3>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, inventore nam quo odio, minus dicta optio nobis cupiditate perspiciatis, cumque aperiam. Repudiandae accusantium amet quis culpa magni libero, omnis saepe!</p>
      <h3>Perguntas de partida</h3>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur optio itaque provident exercitationem. Laudantium fuga non animi? Totam accusamus amet est recusandae ea. Sint, vitae praesentium. Deserunt incidunt quae rerum?</p>
      <h3>Metodologia de investigação</h3>
+     <h4>Etapas de investigação</h4>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi deleniti et quae odit velit at accusantium soluta alias reiciendis magnam aspernatur earum, quia nostrum fugiat error quo repellendus voluptate hic.</p>
+     <h4>Instrumentos de analise</h4>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis mollitia voluptatem, repellat ducimus possimus velit labore beatae autem nam eveniet laudantium, sequi iure numquam at aliquid architecto? Blanditiis, officiis nam!</p>
      <h2>Ordenamento do Territorio em Portugual</h2>
      <h3>Os instrumentos de gestão</h3>
+     <h4>Os instrumentos de planeamento</h4>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi nulla possimus mollitia blanditiis ex aut molestiae, minima vel nisi porro laborum molestias earum accusamus rerum impedit, sint qui quae adipisci.</p>
+     <h4>Os regimes territoriais</h4>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aperiam, iste magnam consectetur ipsam, laborum similique eligendi nesciunt dicta dolorum nam alias placeat porro aliquam itaque reiciendis est eius impedit.</p>
 </body>
 </html>
