--- a/ex008/index.html
+++ b/ex008/index.html
@@ -15,24 +15,33 @@
      <h2>Negrito / Destaque</h2>
      <p>Nessa frase temos um <b>termo em negrito </b>
      usando a tag B(não semantica)</p>
+     <!--b deixa as letras ou numeros em negrito -->
      <p>Nesta frase, tenho um <strong>termo em destaque</strong>
     usando a tag STRONG (semantica)</p>
+      <!--strong deixa as letras ou numeros em negrito -->
     <h2>Italico / Enfase</h2>
     <p>Nesta frase, temos um <i>termo italico</i> usando a tag I (não semantica)</p>
+      <!--i deixa as letras ou numeros italicos -->
     <p>Nesta frase, temos um <em>termo em enfase</em> usando a tag EM (semantica)</p>
+      <!--em deixa as letras ou numeros italicos -->
     <h2>Texto marcado</h2>
     <p>Podemos criar tambem <mark>um texto marcado</mark> usando a taga MARK.</p>
+      <!--mark deixa as letras ou numeros epara deixar o texto marcado -->
     <p>E no outro paragrafo, temos <mark> outro texto marcado</mark> no final.</p>
     <h2>Texto grande e pequeno</h2>
     <p>Estamos criando um <big> texto grande</big> e um <small>texto pequeno</small> nesse paragrafo.</p>
+      <!--big deixa o texto grande e small deixa o texto pequeno -->
     <h2>Texto deletado</h2>
     <p>Podemos marcar <del>um texto como excluido</del> para indicar que ele deve ser lido, mas não considerado.</p>
+      <!--del deixa as letras ou numeros como excluido -->
     <h2>Texto inserido</h2>
     <p>Podemos marcar <ins>um texto como inserido</ins> para dar uma enfase e indicar que ele foi adicionado depois.</p>
+      <!--ins deixa as letras ou numeros com uma marcação embaixo  -->
     <p>Existe tambem o <u>sublinhado</u> com a tag U (não semantica)</p>
+     <!--u deixa as letras ou numeros com uma marcação embaixo  -->
      <h2>Texto sobrescrito</h2>
-     <p>Paara inserir coisas do tipo x<sup>20</sup>+3</p>
+     <p>Paara inserir coisas do tipo x<sup>20</sup>+3</p> <!--sup deixa as letras ou numeros um pouco mais acima -->
      <h2>Texto subscrito</h2>  
-     <p>Para inserir coisas do tipo H<sub>2</sub>0</p>
+     <p>Para inserir coisas do tipo H<sub>2</sub>0</p>  <!--sub deixa as letras ou numeros um pouco mais abaixo -->
 </body>
 </html>
