--- a/ex009/index.html
+++ b/ex009/index.html
@@ -3,28 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outras formatações</title>
+    <title>Listas</title>
 </head>
 <body>
-     <h1>Outras formatações</h1>
-      <h2>Codigo-Fonte / Pre formatação</h2>
-      <p>O comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript.</p>
-      <pre>
-          <code>
-    package com.luv2code.springboot.cruddemo;
-
-    import org.springframework.boot.SpringApplication;
-    import org.springframework.boot.autoconfigure.SpringBootApplication;
-
-    @SpringBootApplication
-    public class CruddemoApplication {
-
-        public static void main(String[] args) {
-            SpringApplication.run(CruddemoApplication.class, args);
-        }
-
-    }
-          </code>
-      </pre>
-    </body>
+      <h1>Trabalhando com Listas</h1>
+        <h2>Listas Ordenadas</h2> 
+        <ol type="I"> <!--todos os types:1 A a I i-->
+            <li>Acordar</li>
+            <li>Ligar para o pai</li>
+            <li>tomar cafe</li>
+            <li>Escovas os dentes</li>
+            <li>Ir para a faculdade</li>
+            <li>Almoçar</li>
+            <li>Ir para o trabalhlo </li>
+            <li>Voltar para casa</li>
+            <li>jantar</li>
+            <li>Dormir</li>
+        </ol>
+        <h2>Listas não Ordenadas</h2>
+        <ul type="square"> <!--todos os types:disc circle square-->
+            <li>Pão</li>
+            <li>Leite</li>
+            <li>Tomate</li>
+            <li>Manteiga</li>
+            <li>Arroz</li>
+            <li>Feijão</li>
+        </ul>
+        <h2>Minhas linguagens favoritas</h2>
+        <ol>
+            <li>Antigas</li>
+            <ol type="a" start="e">
+                <li>Clipper</li>
+                <li>Fortan</li>
+                <li>Visual Basic</li>
+                <li>Delphi</li>
+            </ol>
+            <li>Novas</li>
+            <ol type="a" start="5">
+                <li>PHP</li>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>Kotlin</li>
+            </ol>
+        </ol>
+        <h2>Meus jogos favoritos</h2>
+        <ol>
+            <li>NES</li>
+            <ul>
+                <li>Mario Bros</li>
+                <li>Ninja Gaiden</li>
+            </ul>
+            <li>SNES</li>
+            <ul>
+                <li>Mario</li>
+                <li>Donkey Kong</li>
+            </ul>
+            <li>PlayStation</li>
+            <ul>
+                <li>Final Fantasy</li>
+                <li>Castlevania</li>
+            </ul>
+        </ol>
+        </body>
 </html>
