--- a/ex009/index.html
+++ b/ex009/index.html
@@ -49,20 +49,33 @@
         <h2>Meus jogos favoritos</h2>
         <ol>
             <li>NES</li>
-            <ul>
+            <ul type="square">
                 <li>Mario Bros</li>
+                <ul type="circle">
+                    <li>Mario Bros 3</li>
+                    <li>Mario: Lost Levels</li>
+                </ul>
                 <li>Ninja Gaiden</li>
             </ul>
             <li>SNES</li>
-            <ul>
+            <ul type="square">
                 <li>Mario</li>
                 <li>Donkey Kong</li>
             </ul>
             <li>PlayStation</li>
-            <ul>
+            <ul type="square">
                 <li>Final Fantasy</li>
                 <li>Castlevania</li>
             </ul>
         </ol>
+        <h2>Lista de Definições</h2>
+        <dl>
+            <dt>HTML</dt>
+            <dd>Linguagem de marcação para a criação de conteudo de um site.</dd>
+            <dt>CSS</dt>
+            <dd>Linguagem de marcação para a criação do design de um site.</dd>
+            <dt>JavaScript</dt>
+            <dd>Linguagem de programação para a criação de interatividade de um site</dd>
+        </dl>
         </body>
 </html>
