--- a/ex010/index.html
+++ b/ex010/index.html
@@ -11,5 +11,11 @@
      <h2>Usando links internos</h2>
      <p>Esta é a primeira pagina do site. Se voce quiser, pode acessar tambem a minha <a href="pag002.html" rel="next" target="_self">Segunda Pagina</a> </p>
       <p>Voce tambem pode acessar a nossa <a href="noticias/pag003.html" rel="next" target="_self">pagina de noticias</a></p>
+
+      <h1>Links para donwload</h1>
+      <ul>
+        <li><a href="livro/LinuxNotesForProfessionals.pdf" download="LinuxNotesForProfessionals.pdf" type="application/pdf">Baixar livro em PDF</a></li>
+        <li><a href="livro/LinuxNotesForProfessionals (cópia).zip" download="LinuxNotesForProfessionals.zip" type="application/zip">Baixar livro em arquivo ZIP</a></li>
+      </ul>
 </body>
 </html>
