--- a/ex012/index.html
+++ b/ex012/index.html
@@ -9,6 +9,15 @@
     <h1>Inserindo videos hospedados localmente</h1>
      <p>Este video esta hospedado no meu proprio servidor</p>
 
-     <video src="midia/WhatsApp_video.mp4" width="500" controls></video>
+     <video src="midia/WhatsApp_video.mp4" width="500" controls autoplay loop>
+        <source src="midia/WhatsApp_video.mp4" type="video/mp4">
+     <p>Seu navegador não tem compatibilidade com reprodução de videos.</p>
+    </video>
+
+    <h1>inserindo videos do youtube</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LW0bhKitRBk?si=QXSytIF47KbslcXQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h1>Inserindo vídeos do Vimeo</h1>
+    <iframe src="https://player.vimeo.com/video/197093965?color=ff9933&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </body>
 </html>
