--- a/ex015/index.html
+++ b/ex015/index.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilos Locais / Internos</title>
-    <style>
-        body{
-            background-color: lightsteelblue;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
-        }
-        h1{
-            color: blue;
-            background-color: lightblue;
-        }
-        p{
-            text-align: justify;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>  
      <h1>Capitulo 1</h1>
@@ -30,5 +17,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dicta veniam natus beatae omnis quo velit quos consequatur facere. Repellat laboriosam doloribus tenetur ab cum saepe exercitationem consectetur nam reprehenderit.</p>
     <h2>Capitulo 2.2</h2>
     <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. In dolor reiciendis aliquam placeat minima repudiandae est ut dignissimos sint? Earum voluptatem quas consectetur adipisci dolore dolores similique amet possimus esse?</p>
+    <p><a href="pagina02.html" target="_self">Ir para a pagina 2</a></p>
  </body>
 </html>
