--- a/ex016/cor01.html
+++ b/ex016/cor01.html
@@ -14,9 +14,14 @@
      <!--Hexadecimal: 0 1 2 3 4 5 6 7 8 9 A B C D E F-->
      <h2 style="background-color: #0000ff; color: #ffffff;">Exemplo de cores</h2>
      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta consequuntur alias, non quae quia doloremque nihil corporis repudiandae deserunt, architecto dolor dolores expedita veritatis eligendi suscipit provident. Voluptatem, molestias. Repudiandae.</p>
+     <!--Representação em RGB(Red, Green, Blue)-->
      <h2 style="background-color: rgb(0,0,255); color: rgb(255, 255, 255);">Exemplo de cores</h2>
      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos ipsa maiores exercitationem obcaecati eligendi totam et expedita quod enim voluptas unde cum quis corrupti harum fuga at blanditiis, rerum laudantium!</p>
+     <!--Representação por HSL (Hue, Sturation, Luminosity)-->
      <h2 style="background-color: hsl(240, 100%, 50%); color: hsl(0, 0%, 100%);">Exemplo de cores</h2>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe esse rerum, quibusdam obcaecati blanditiis porro impedit labore explicabo fugiat! Rem qui temporibus a, adipisci blanditiis unde aliquam ducimus! Veniam, unde?</p>
+
+     <h2 style="background-color: #0000ff; color: #ffffff;">Exemplo de cores</h2>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe esse rerum, quibusdam obcaecati blanditiis porro impedit labore explicabo fugiat! Rem qui temporibus a, adipisci blanditiis unde aliquam ducimus! Veniam, unde?</p>
 </body>
 </html>
