--- a/ex021/caixa02.html
+++ b/ex021/caixa02.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grouping Tags</title>
 </head>
 <body>
-    
+    <div>
+        <div id="cabecalho">
+           <h1>
+
+           </h1>
+           <div id="menu">
+               
+              </div>
+           </div>
+           <div id="conteudo">
+
+           </div>
+           <div id="rodape">
+
+        </div>
+    </div>
 </body>
 </html>
